完成下载插图。

--- a/main.tex
+++ b/main.tex
@@ -6,23 +6,67 @@
 \input{setup/format.tex}
 
 % Information
-\title[树木点云三维重建]{基于骨架提取的树木点云\\三维重建方法研究}
-\subtitle[Tree Point Cloud 3D Reconstruction]{Study On Tree Point Cloud 3D Reconstruction\\ Based on
-  Skeletion Extraction}
-\author[Tengyu, H.]{郝腾宇}
-\institute[智能媒体处理]{西北农林科技大学信息工程学院}
-\date{\today}
+\title[\TeXLive 的安装]{\TeXLive 的安装简单教程}
+\author[N. Geng]{耿楠}
+\institute[教发中心]{西北农林科技大学教学发展中心}
+\date{\tosemester}
 \titlegraphic{%
-  \vspace{4.8cm}
-  \qrcode[hyperlink, height=1.6cm]{https://gitee.com/registor/multimedia-beamer}}
+  \vspace{3.0cm}
+  \qrcode[hyperlink, height=1.6cm]{https://github.com/registor/install-texlive-studio}}
 
 \begin{document}
 
 \maketitle
 
-\section[目的和意义]{研究的目的和意义}
+\section[下载\TeXLive]{下载\TeXLive 镜像文件}
+\begin{frame}{下载\TeXLive}{ISO镜像文件}
+  \begin{itemize}
+  \item 下载
+    \begin{itemize}
+    \item http://www.tug.org/texlive/\link{http://www.tug.org/texlive/}
+      % \begin{itemize}
+      % \item \tl \ \enquote{availabe over the Internet}
+      % \item \tl \ \enquote{Downloading one huge ISO file}
+      % \end{itemize}
+    \end{itemize}
+  \end{itemize}  
+  \centering
+  \vfill
+  \includegraphics[width=0.48\textwidth]{downloadiso/tugtexlive}\quad
+  \includegraphics[width=0.48\textwidth]{downloadiso/downloadlink}
+  \vfill
+\end{frame}
+\begin{frame}{下载\TeXLive}{ISO镜像文件}  
+  \begin{itemize}
+  \item 下载
+    \begin{itemize}
+    \item http://www.tug.org/texlive/\link{http://www.tug.org/texlive/}
+    \end{itemize}
+  \end{itemize}
+  \centering
+  \vfill
+  \includegraphics[width=0.48\textwidth]{downloadiso/mirrolink}\quad
+  \includegraphics[width=0.48\textwidth]{downloadiso/isofilelist}
+  \vfill
+\end{frame}
+\begin{frame}{下载\TeXLive}{\tl ISO镜像文件}
+  %\stretchon
+  \begin{itemize}
+  \item 下载
+    \begin{itemize}
+    \item
+      http://www.tug.org/texlive/\link{http://www.tug.org/texlive/}
+      
+    \end{itemize}
+  \end{itemize}
+  \centering
+  \vfill
+  \includegraphics[width=0.85\textwidth]{downloadiso/isodownloading}
+  \vfill
+  %\stretchoff
+\end{frame}
 \begin{frame}[standout,plain]
-  你说是什么目的和意义 ！
+  Downloading...
 \end{frame}
 
 
