--- a/setup/format.tex
+++ b/setup/format.tex
@@ -280,7 +280,7 @@
 \definecolor{tlblue}{HTML}{0078B8}
 \newcommand*\TeXLive{T\kern -.1667em\lower .5ex\hbox {E}\kern
   -.025emX\,Live}
-\newcommand\tl[1][2019]{\bfseries\TeXLive ~ #1}
+\newcommand\tl[1][2019]{\TeXLive ~ #1}
 \newcommand\tlive[1][2019]{
   \begin{tikzpicture}[x=1pt,y=1pt,inner sep=0pt,outer sep=0pt]
     \fill [tlblue] (0,0) rectangle (567,160);
