--- a/setup/packages.tex
+++ b/setup/packages.tex
@@ -32,6 +32,9 @@
 % 特殊符号
 \usepackage{pifont}
 
+% 代码盒子等
+\usepackage{boxie}
+
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "../main.tex"
