--- a/setup/format.tex
+++ b/setup/format.tex
@@ -300,7 +300,7 @@
 % 设置minted宏包编排代码的参数及用于latex代码排版的简化命令
 \setminted{fontsize=\footnotesize, breaklines=true, breakautoindent=false}
 \newmintinline{tex}{fontsize=\footnotesize}
-\newmintinline{sh}{fontsize=\footnotesize}
+\newmintinline{sh}{breaklines=true}
 \newmintinline[texinlinett]{tex}{escapeinside=||}
 \newminted{tex}{fontsize=\scriptsize, bgcolor=yellow!20, frame=lines, autogobble}
 \newminted[texcodett]{tex}{autogobble, fontsize=\scriptsize, bgcolor=yellow!20, frame=lines, escapeinside=||}
